--- a/collections/requirements.yml
+++ b/collections/requirements.yml
@@ -1,4 +1,6 @@
 ---
 collections:
-# Use Cisco Intersight Collection
+  # Use Cisco Intersight Collection
   - name: cisco.intersight
+  # Use Cisco CVD Compute Collection
+  - name: cisco.cvd_compute
