--- a/collections/requirements.yml
+++ b/collections/requirements.yml
@@ -3,4 +3,5 @@ collections:
   # Use Cisco Intersight Collection
   - cisco.intersight
   # Use Cisco CVD Compute Collection
-  - cisco.cvd_compute
+  - name: cisco.cvd_compute
+    version: 1.1.0
