--- a/collections/requirements.yml
+++ b/collections/requirements.yml
@@ -4,4 +4,4 @@ collections:
   - cisco.intersight
   # Use Cisco CVD Compute Collection
   - name: cisco.cvd_compute
-    type: galaxy
+    version: '==1.1.0'
