--- a/collections/requirements.yml
+++ b/collections/requirements.yml
@@ -1,7 +1,5 @@
 ---
 collections:
   # Use Cisco Intersight Collection
-  - cisco.intersight
-  # Use Cisco CVD Compute Collection
-  - name: cisco.cvd_compute
-    version: '==1.1.0'
+  - name: ./cisco/
+    type: subdirs
