--- a/test_rediscover.yml
+++ b/test_rediscover.yml
@@ -1,6 +1,8 @@
 ---
 - name: Test Cisco UCS chassis rediscovery in Intersight
   hosts: localhost
+  colletions:
+    - cisco.cvd_compute
 
   vars:
     # rediscover_ucs_chassis_api_private_key: "{{ 'INTERSIGHT_API_PRIVATE_KEY' }}"
