--- a/test_rediscover.yml
+++ b/test_rediscover.yml
@@ -9,4 +9,4 @@
     # rediscover_ucs_chassis_api_key_id: "{{ 'INTERSIGHT_API_KEY_ID' }}"
     rediscover_ucs_chassis_chassis_name_list: ['AC05-6454-1']
   roles:
-    - cisco.cvd_compute.rediscover_ucs_chassis
+    - rediscover_ucs_chassis
