--- a/test_rediscover.yml
+++ b/test_rediscover.yml
@@ -8,5 +8,9 @@
     # rediscover_ucs_chassis_api_private_key: "{{ 'INTERSIGHT_API_PRIVATE_KEY' }}"
     # rediscover_ucs_chassis_api_key_id: "{{ 'INTERSIGHT_API_KEY_ID' }}"
     rediscover_ucs_chassis_chassis_name_list: ['AC05-6454-1']
-  roles:
-    - rediscover_ucs_chassis
+#  roles:
+#    - rediscover_ucs_chassis
+  tasks:
+    - name: Rediscover UCS chasis
+      include_role:
+        name: rediscover_ucs_chassis
