--- a/test_rediscover.yml
+++ b/test_rediscover.yml
@@ -2,7 +2,8 @@
 - name: Test Cisco UCS chassis rediscovery in Intersight
   hosts: localhost
   collections:
-    - cisco.cvd_compute
+    - name: ./cisco/
+      type: subdirs
 
 #  vars:
     # rediscover_ucs_chassis_api_private_key: "{{ 'INTERSIGHT_API_PRIVATE_KEY' }}"
