--- a/collections/requirements.yml
+++ b/collections/requirements.yml
@@ -1,5 +1,7 @@
 ---
 collections:
   # Use Cisco Intersight Collection
-  - name: ./cisco/
-    type: subdirs
+  - name: cisco.intersight
+    version: 2.2.0
+  - name: cisco.cvd_compute
+    version: 1.1.0
