--- a/collections/requirements.yml
+++ b/collections/requirements.yml
@@ -1,7 +1,7 @@
 ---
 collections:
   # Use Cisco Intersight Collection
-  - name: cisco.intersight
-    version: 2.2.0
+  - cisco.intersight
+    
   - name: cisco.cvd_compute
-    version:==1.1.0
+    version: "==1.1.0"
