--- a/collections/requirements.yml
+++ b/collections/requirements.yml
@@ -4,4 +4,5 @@ collections:
   - name: cisco.intersight
   # Use Cisco CVD Compute collection
   - Name: cisco.cvd_compute
+    source: https://ac08-ocp-installer.ac08-ocp.flexpodb4.cisco.com/pulp_ansible/galaxy/published/
     version:==1.1.0
