--- a/collections/requirements.yml
+++ b/collections/requirements.yml
@@ -5,4 +5,4 @@ collections:
   # Use Cisco CVD Compute collection
   - Name: cisco.cvd_compute
     source: https://ac08-ocp-installer.ac08-ocp.flexpodb4.cisco.com/pulp_ansible/galaxy/published/
-    version:==1.1.0
+    version:"==1.1.0"
