--- a/requirements.yml
+++ b/requirements.yml
@@ -1,8 +1,8 @@
 ---
 collections:
   # Use the Cisco Intersight Collection
-  - name: cisco.intersight
+  - name: intersight
     version: 2.2.0
   # Use Cisco CVD Compute collection
-  - name: cisco.cvd_compute
+  - name: cvd_compute
     version: 1.1.0
